--- a/SimplePOO.vcxproj
+++ b/SimplePOO.vcxproj
@@ -140,17 +140,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Canva.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="SimplePOO.cpp" />
     <ClCompile Include="Square.cpp" />
+    <ClCompile Include="SquareHole.cpp" />
+    <ClCompile Include="TrianEqui.cpp" />
     <ClCompile Include="Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Canva.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="Square.h" />
+    <ClInclude Include="SquareHole.h" />
+    <ClInclude Include="TrianEqui.h" />
     <ClInclude Include="Triangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
